# fatp-ecs

./: .clang-format  .gitignore  CMakeLists.txt  CommandBuffer.h  CommandBuffer_Impl.h  ComponentMask.h  ComponentStore.h  DEVELOPMENT_GUIDELINES.md  Entity.h  EventBus.h  FatpEcs.h  README.md  Registry.h  Scheduler.h  TypeId.h  View.h  build.bat  build.ps1  build.sh  test_ecs.cpp  test_ecs_phase2.cpp  vcpkg.json
.github/workflows/: benchmarks.yml  ci.yml
bench/: benchmark.cpp
bench/results/: pc_results.txt
demo/: Simulation.h  main.cpp  visual_main.cpp
docs/: Companion Guide - fatp-ecs.md  Overview - fatp-ecs.md  User Manual - fatp-ecs.md
include/fatp_ecs/: CommandBuffer.h  ComponentStore.h  EntityHandle.h  EntityHandle_Impl.h  EntityNames.h  EntityTemplate.h  EntityTemplate_Impl.h  EventBus.h  FatpEcs.h  FrameAllocator.h  NonOwningGroup.h  Observer.h  OwningGroup.h  ProcessScheduler.h  Registry.h  RuntimeView.h  SafeMath.h  Scheduler.h  Snapshot.h  Snapshot_Impl.h  StoragePolicy.h  SystemToggle.h  TypeId.h  View.h
tests/: test_clear.cpp  test_contract_clear_groups.cpp  test_contract_destroy_ordering.cpp  test_ecs.cpp  test_ecs_phase2.cpp  test_ecs_phase3.cpp  test_entity_copy.cpp  test_entt_parity.cpp  test_exclude_filters.cpp  test_handle.cpp  test_new_api.cpp  test_non_owning_group.cpp  test_observer.cpp  test_owning_group.cpp  test_patch.cpp  test_process_scheduler.cpp  test_runtime_view.cpp  test_snapshot.cpp  test_sort.cpp  test_storage_policy.cpp  test_view_iteration.cpp
